--- a/host-app/package.json
+++ b/host-app/package.json
@@ -1,12 +1,14 @@
-
-    {
-      "name": "host-app",
-      "dependencies": {
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
-        "vite": "^4.0.0",
-        "tailwindcss": "^3.0.0",
-        "module-federation-plugin": "^1.0.0"
-      }
-    }
-    
+{
+  "name": "host-app",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite"
+  },
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "vite": "^4.0.0",
+    "tailwindcss": "^3.0.0",
+    "@originjs/vite-plugin-federation": "^1.0.0"
+  }
+}
