--- a/micro-frontend-1/package.json
+++ b/micro-frontend-1/package.json
@@ -1,12 +1,14 @@
-
-    {
-      "name": "micro-frontend-1",
-      "dependencies": {
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
-        "vite": "^4.0.0",
-        "tailwindcss": "^3.0.0",
-        "module-federation-plugin": "^1.0.0"
-      }
-    }
-    
+{
+  "name": "micro-frontend-1",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite --port 3001"
+  },
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "vite": "^4.0.0",
+    "tailwindcss": "^3.0.0",
+    "@originjs/vite-plugin-federation": "^1.0.0"
+  }
+}
