--- a/micro-frontend-1/package.json
+++ b/micro-frontend-1/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "@originjs/vite-plugin-federation": "^1.3.6",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwindcss": "^3.4.14",
